--- a/styles/video-container.css
+++ b/styles/video-container.css
@@ -4,7 +4,7 @@
     height: 0;
     overflow: hidden;
     max-width: 70%;
-    margin: 0 auto;
+    margin: 4rem auto 4rem auto;
 }
 
 .video-container iframe {
